<resources>
    <string name="app_name">PWGuide</string>
    <string name="kamera">Kamera</string>
    <string name="navigation">Nawigacja</string>
    <string name="info">Informacje</string>
    <string name="wybierz_plan">Na zewnątrz</string>
    <string name="wybierz_budynek">Wewnątrz budynku</string>
    <string name="sposob_przejscia">Wybierz gdzie się obecnie znajdujesz</string>
    <string name="przejscie">Przejście do kolejnej sali</string>
    <string name="plan">Wybierz budynek z planu</string>
    <string name="wpisz_budynek">Wpisz nazwę budynku</string>
    <string name="wpisz_sala">Wpisz nazwę sali</string>
    <string name="potwierdz">Potwierdź wybór</string>
    <string name="nazwa_budynku">Nazwa budynku</string>
    <string name="nazwa_sali">Nazwa sali</string>
    <string name="action_settings">Settings</string>

    <!-- Fragments strings -->
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="monday_en">Monday</string>
    <string name="tuesday_en">Tuesday</string>
    <string name="wednesday_en">Wednesday</string>
    <string name="thursday_en">Thursday</string>
    <string name="friday_en">Friday</string>
    <string name="saturday_en">Saturday</string>
    <string name="sunday_en">Sunday</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>

    <!-- Main Activity strings -->
    <string name="timetable">TimeTable</string>
    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="clear">Wyczyść</string>

    <string name="add_subject">Dodaj przedmiot</string>
    <string name="edit_subject">Edytuj przedmiot</string>
    <string name="room">Sala</string>
    <string name="time">Godziny</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="time_to_dialog">Do:</string>
    <string name="time_from_dialog">Od:</string>
    <string name="subject_dialog">Przedmiot:</string>
    <string name="room_dialog">Sala:</string>
    <string name="select_time">Wybierz godzinę</string>
    <string name="select_color">Wybierz kolor</string>
    <string name="choose_time">Wybierz godzinę</string>
    <string name="choose_date">Wybierz datę</string>
    <string name="choose_color">Wybierz kolor</string>
    <string name="building">Budynek</string>
    <string name="building_dialog">Budynek:</string>
    <string name="class_type_dialog">Typ zajęć:</string>
    <string name="class_type">Typ zajęć</string>
    <string name="semester">Semestr:</string>

    <!-- Notification -->
    <string name="notification_title">Today\'s lessons</string>
    <string name="do_not_have_lessons">You do not have lessons!</string>

    <string name="select_build">Nazwa budynku</string>
    <string name="select_hall">Numer sali</string>
    <string name="Wybierz_punkt_początkowy">Wybierz punkt początkowy</string>

    <string name="timetable_username">Nazwa użytkownika:</string>
    <string name="timetable_apiKey">Klucz API:</string>
    <string name="download">Pobierz</string>

    <string name="continuee">Kontyuuj</string>
    <string name="pin">PIN:</string>

    <string name="clear_days">Wybierz dni do wyczyszczenia:</string>
    <string name="choose_days">Widoczne dni:</string>

    <string-array name="buildings">
        <item>Gmach Główny</item>
        <item>Gmach Elektrotechniki</item>
        <item>Gmach Mechaniki</item>
        <item>Stara Kotłownia</item>
        <item>Budynek pod Kominem</item>
    </string-array>

    <string-array name="class_types">
        <item>Wykład</item>
        <item>Ćwiczenia</item>
        <item>Laboratorium</item>
        <item>Projekt</item>
        <item>Język obcy</item>
        <item>WF</item>
    </string-array>

    <string-array name="class_types_abbr">
        <item>W</item>
        <item>C</item>
        <item>L</item>
        <item>P</item>
        <item>JO</item>
        <item>WF</item>
    </string-array>

    <string-array name="halls">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>12</item>
        <item>123</item>
        <item>5</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

</resources>