<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Wybierz dni:" />

    <LinearLayout
        android:id="@+id/checkbox_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/checkBox_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/checkBox_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/checkBox_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/checkBox_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/checkBox_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/checkBox_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_timetable_cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/secondary_action"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/clear_timetable"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/danger"
            android:text="@string/clear" />

    </LinearLayout>

</LinearLayout>
