<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/days_display_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        android:text="@string/choose_days" />

    <LinearLayout
        android:id="@+id/days_display_checkbox_list"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/days_display_checkBox_monday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/days_display_checkBox_tuesday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/days_display_checkBox_wednesday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/days_display_checkBox_thursday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/days_display_checkBox_friday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/days_display_checkBox_saturday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/days_display_checkBox_sunday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            android:text="@string/sunday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/days_display_cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/secondary_action"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/days_display_save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>
