<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/subject_dialog"
            android:textAlignment="textStart"
            android:textColor="@color/button_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/subject_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="#F44336"
            android:textColorHint="@color/white"
            android:textColorLink="#F44336" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/class_type_dialog"
            android:textAlignment="textStart"
            android:textColor="@color/button_text"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/class_type_spinner"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:backgroundTint="@color/button_text"
            android:popupBackground="@drawable/yellow_outline"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart"
            android:layout_weight=".7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/building_dialog"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/building_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="#F44336"
            android:textColorHint="@color/white"
            android:textColorLink="#F44336"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/room_dialog"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/room_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/time_from_dialog"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/from_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/select_time"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/time_to_dialog"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/to_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/select_time"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:cursorVisible="false"
            android:text="@string/select_color"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>