<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
android:orientation="vertical"
android:padding="15dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:text="@string/timetable_username"
        android:textAlignment="textStart"
        android:textColor="@color/button_text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/timetable_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHighlight="#F44336"
        android:textColorHint="@color/white"
        android:backgroundTint="@android:color/white"
        android:textColorLink="#F44336" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/timetable_apiKey"
            android:textAlignment="textStart"
            android:textColor="@color/button_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/timetable_apiKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="#F44336"
            android:textColorHint="@color/white"
            android:backgroundTint="@android:color/white"
            android:textColorLink="#F44336" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/timetable_cancel"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/secondary_action"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/timetable_download"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorAccent"
        android:text="@string/download" />

</LinearLayout>

</LinearLayout>
