<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".MenuActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            tools:context=".MenuActivity"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="219dp"
                android:layout_height="95dp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/potwierdz"
                android:textColor="@color/button_text"
                android:textSize="15.5sp"
                app:backgroundTint="@color/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/autoCompleteTextView2"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/autoCompleteTextView2"
                app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView2"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="277dp"
                android:layout_height="61dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/wpisz_budynek"
                android:textColor="@color/button"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="277dp"
                android:layout_height="61dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/wpisz_sala"
                android:textColor="@color/button"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/nazwa_budynku"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="TextContrastCheck" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="288dp"
                android:minHeight="48dp"
                android:text="@string/nazwa_sali"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>